# cdlv

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  array.c  array.h  cdlv.c  cdlv.h  cdlv_base.c  cdlv_choice.c  cdlv_macros.h  cdlv_main.c  cdlv_parse.c  cdlv_render.c  cdlv_sdl.c  cdlv_text.c  cdlv_types.h  cdlv_util.c  cdlv_util.h  common.h  file.c  file.h  main.c  makefile  mdlv.c  mdlv.h  mongoose.h  parse.c  parse.h  play.h  resource.c  resource.h  sample.c  scene.c  scene.h  server.c  text.c  text.h  util.c  (+4 more)
hashdict.c/: LICENSE  hashdict.c  hashdict.h
menu/: cdlv_menu.c  cdlv_menu.h  cdlv_sdl.c  config.txt  main.c
res/sample/: sample.cdlv
src/: base.c  cdlv.c  cdlv.h  cdlv_base.c  cdlv_macros.h  cdlv_main.c  cdlv_menu.c  cdlv_menu.h  cdlv_parse.c  cdlv_text.c  cdlv_types.h  main.c  menu.c  parse.c
static/: index.html  script.js
vim/ftdetect/: adv.vim
vim/syntax/: adv.vim
web_root/: script.js
